<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mulhermaravilhaimg"
    tools:context=".MulherMaravilhaActivity">

    <TextView
        android:id="@+id/txtvwidheroi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:fontFamily="@font/cutive"
        android:text="@string/idheroi"
        android:textColor="#FFE85F"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtvwdianaprince" />

    <TextView
        android:id="@+id/txtvwespecieheroi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/cutive"
        android:text="@string/especieheroi"
        android:textColor="#FFE85F"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtvwidheroi" />

    <TextView
        android:id="@+id/txtvwhabilidadeheroi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/cutive"
        android:text="@string/habilidadesheroi"
        android:textColor="#FFE85F"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtvwespecieheroi" />

    <TextView
        android:id="@+id/txtvwvulnerabilidadeheroi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/cutive"
        android:text="@string/vulnerabilidadesheroi"
        android:textColor="#FFE85F"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtvwhabilidadeheroi" />

    <TextView
        android:id="@+id/txtvwnivelacessoheroi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/cutive"
        android:text="@string/nivelacessoheroi"
        android:textColor="#FFE85F"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtvwvulnerabilidadeheroi" />

    <ImageView
        android:id="@+id/imgvwmulhermaravilha"
        android:layout_width="252dp"
        android:layout_height="253dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtvwmulhermaravilha"
        app:srcCompat="@drawable/wonderwomanicon" />

    <Button
        android:id="@+id/btnmaisinfo"
        android:layout_width="324dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#BC7F00"
        android:fontFamily="@font/cutive"
        android:onClick="Direcionar"
        android:text="@string/maisinfo"
        android:textAlignment="center"
        android:textColor="#FFE85F"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtvwnivelacessoheroi" />

    <TextView
        android:id="@+id/txtvwmulhermaravilha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/cutive"
        android:text="@string/mulhermaravilha"
        android:textColor="#FFE85F"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtvwdianaprince"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/cutive"
        android:text="@string/dianaprince"
        android:textColor="#FFE85F"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgvwmulhermaravilha" />

</androidx.constraintlayout.widget.ConstraintLayout>