<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/batmanimg"
    tools:context=".BatmanActivity">

    <TextView
        android:id="@+id/txtvwidheroi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:fontFamily="@font/cutive"
        android:text="@string/idheroi"
        android:textColor="#FFF500"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtvwbrucewayne" />

    <TextView
        android:id="@+id/txtvwespecieheroi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/cutive"
        android:text="@string/especieheroi"
        android:textColor="#FFF500"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtvwidheroi" />

    <TextView
        android:id="@+id/txtvwhabilidadeheroi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/cutive"
        android:text="@string/habilidadesheroi"
        android:textColor="#FFF500"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtvwespecieheroi" />

    <TextView
        android:id="@+id/txtvwvulnerabilidadeheroi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/cutive"
        android:text="@string/vulnerabilidadesheroi"
        android:textColor="#FFF500"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtvwhabilidadeheroi" />

    <TextView
        android:id="@+id/txtvwnivelacessoheroi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/cutive"
        android:text="@string/nivelacessoheroi"
        android:textColor="#FFF500"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtvwvulnerabilidadeheroi" />

    <TextView
        android:id="@+id/txtvwbrucewayne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="400dp"
        android:fontFamily="@font/cutive"
        android:text="@string/brucewayne"
        android:textColor="#FFF500"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgvwbatman"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imgvwbatman"
        android:layout_width="252dp"
        android:layout_height="253dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtvwbatman"
        app:srcCompat="@drawable/batmanicon" />

    <Button
        android:id="@+id/btnmaisinfo3"
        android:layout_width="324dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#FFF500"
        android:fontFamily="@font/cutive"
        android:onClick="Direcionar"
        android:text="@string/maisinfo"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtvwnivelacessoheroi" />

    <TextView
        android:id="@+id/txtvwbatman"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/cutive"
        android:text="@string/batman"
        android:textColor="#FFF500"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>